[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "wrap_help"] }
gcd = "2.3.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.10.2"
