[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
clap = { version = "4.4.10", features = ["derive", "wrap_help"] }
gcd = "2.3.0"
itertools = "0.12.0"
petgraph = { version = "0.6.4", features = ["all"] }
rayon = "1.8.0"
regex = "1.10.2"
